# Optimizer_water

./: .gitignore  pyproject.toml  setup.cfg
exploration/: call_model.py  constants.py  dto.py  effect_calculation.py  effect_calulation_hyperopt.py  feature_engineering.py  loss_function.py  loss_function_for_effect_calculation.py  manual_run_hyperopt_optimizer.py  manual_test.py  model.py  new_optimizer.py  optimizer.py  prediction_test.py  variants_generator.py
exploration/docs/: index.md
exploration/models/: pot_alkalinity_queue_1.cb  pot_alkalinity_queue_2.cb  pot_aluminum_queue_1.cb  pot_aluminum_queue_2.cb  pot_ammonia_ammonium_queue_1.cb  pot_ammonia_ammonium_queue_2.cb  pot_chromaticity_model_queue_1.cb  pot_chromaticity_model_queue_2.cb  pot_hydrogen_model_queue_1.cb  pot_hydrogen_model_queue_2.cb  pot_iron_queue_1.cb  pot_iron_queue_2.cb  pot_manganese_model_queue_1.cb  pot_manganese_model_queue_2.cb
