[metadata]
name = turbo_generator_model
version = 1.0.0a1
description = Turbo Generator Model
author = Anton Evseev
author_email = Anton.Evseev@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find_namespace:
python_requires = >=3.7

install_requires =
    pydantic==1.8.2
    numpy==1.21.6
    pandas==1.3.5

;    Раскомментируйте, если используете подгружаемую модель
;    joblib==1.3.2

    evraz-classic-components==1.0.0
    evraz-model-transport==1.0.1

[options.packages.find]
exclude = tests*

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-cov==2.12.1
    isort==5.10.0
    yapf==0.32.0
    toml==0.10.2
    flake8==5.0.4
    Flake8-pyproject==1.1.0
